# ESP32_Embbeded_Home

./: .dockerignore  .firebaserc  .gitignore  .vercelignore  ALERTS_API.md  API_EXAMPLES.md  API_INTEGRATION.md  API_TESTING_GUIDE.md  ARCHITECTURE.md  AUDIO_INDEPENDENCE.md  BACKEND_README.md  BUG_REPORT_HUB_SENSOR_DATA.md  CHANGELOG_NON_BLOCKING.md  CLAUDE.md  CLOUD_FUNCTION_DEPLOYMENT.md  CMakeLists.txt  ESP32_IoT_API.postman_collection.json  FIREBASE_CLEANUP_SETUP.md  FIREBASE_CLOUD_FUNCTIONS_SETUP.md  FIRESTORE_INDEX_SETUP.md  FRONTEND_API_INTEGRATION.md  FRONTEND_INTEGRATION.md  HEARTBEAT_README.md  INTEGRATION_EXAMPLE.md  NON_BLOCKING_FACE_IMAGE_UPLOAD.md  NON_BLOCKING_FACE_RECOGNITION.md  README.md  README_DOORLOCK.md  STREAMING_API.md  Scoring_system.md  TTL_SETUP.md  UART_COMMANDS.md  WEATHER_SETUP.md  WEB_UI_README.md  WIFI_AUDIO_SETUP.md  WIRING_DIAGRAM.md  backup env  claude.md  dependencies.lock.esp32s3  doorbell-control.html  (+13 more)
.claude/: settings.local.json
Backup/: main.txt  main_esp32.txt
Backups/: CMakeList.txt  frame_cap_pipeline_face_detect.bkup  spi_code.backup
Fritzing/: Doorbell.fzz  Hub.fzz  Sensor.fzz
Room_Sensor/: .gitignore  README.md  WIRING_DIAGRAM.md  platformio.ini
config/: db.js  firebase.js  mqtt.js
controllers/: alerts.js  auth.js  deviceController.js  devices.js  (+1 more)
main/: CMakeLists.txt  frame_cap_pipeline.cpp  http_server.cpp  idf_component.yml  main.c  main.cpp  xiao_recognition_app.cpp  xiao_recognition_button.cpp  xiao_standby_control.cpp  xiao_standby_control.hpp
main/app/: frame_cap_pipeline.cpp  frame_cap_pipeline.hpp  who_spi_send_node.hpp  xiao_recognition_app.cpp  xiao_recognition_app.hpp
main/audio/: i2s_microphone.cpp  i2s_microphone.hpp
main/backend/: WEBSOCKET_MIGRATION.md  backend_stream.cpp  backend_stream.hpp  backend_stream_arduino.cpp  backend_stream_http.cpp.txt
main/control/: xiao_recognition_button.hpp  xiao_standby_control.cpp
main/jpeg/: JpegEncoder.cpp  JpegEncoder.hpp
main/network/: http_server.cpp  http_server.h
main/recognition/: face_db_reader.cpp  face_db_reader.hpp  face_manager.cpp  face_manager.hpp
main/spi/: slave_spi.cpp  slave_spi.hpp  spi_test.cpp  spi_test.hpp
main/uart/: uart_comm.cpp  uart_comm.hpp
(+224 files in other folders)
